Enable XML Generator tool on the main page and add generator files

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         <div class="tiles-container">
             <!-- Custom XML Generator Tile (coming soon) -->
-            <div class="tile tile-disabled">
+            <a href="xml-generator.html" class="tile">
                 <div class="tile-icon">
                     <i class="fas fa-code"></i>
                 </div>
@@ -122,9 +122,8 @@
                     <p class="tile-description">Niestandardowy generator XML</p>
                     <div class="tile-detail">Narzędzie do tworzenia własnych struktur XML z walidacją schematów XSD
                     </div>
-                    <div class="coming-soon">Wkrótce dostępne</div>
                 </div>
-            </div>
+            </a>
 
             <!-- XML Validator Tile (coming soon) -->
             <div class="tile tile-disabled">
