--- a/index.html
+++ b/index.html
@@ -109,60 +109,63 @@
             </div>
         </div>
 
-        <h2 class="section-title section-title-other">Inne narzędzia</h2>
+        <div class="other-tools-container">
+            <h2 class="section-title section-title-other">Inne narzędzia</h2>
 
-        <div class="tiles-container">
-            <!-- Custom XML Generator Tile (coming soon) -->
-            <a href="xml-generator.html" class="tile">
-                <div class="tile-icon">
-                    <i class="fas fa-code"></i>
-                </div>
-                <div class="tile-content">
-                    <h3>Generator XML</h3>
-                    <p class="tile-description">Niestandardowy generator XML</p>
-                    <div class="tile-detail">Narzędzie do tworzenia własnych struktur XML z walidacją schematów XSD
+            <div class="tiles-container">
+                <!-- Custom XML Generator Tile (coming soon) -->
+                <a href="xml-generator.html" class="tile">
+                    <div class="tile-icon">
+                        <i class="fas fa-code"></i>
+                    </div>
+                    <div class="tile-content">
+                        <h3>Generator XML</h3>
+                        <p class="tile-description">Niestandardowy generator XML</p>
+                        <div class="tile-detail">Narzędzie do tworzenia własnych struktur XML z walidacją schematów XSD
+                        </div>
+                    </div>
+                </a>
+
+                <!-- XML Validator Tile (coming soon) -->
+                <div class="tile tile-disabled">
+                    <div class="tile-icon">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
+                    <div class="tile-content">
+                        <h3>Walidator XML</h3>
+                        <p class="tile-description">Walidacja plików XML</p>
+                        <div class="tile-detail">Narzędzie do sprawdzania poprawności plików XML względem schematów XSD
+                        </div>
+                        <div class="coming-soon">Wkrótce dostępne</div>
                     </div>
                 </div>
-            </a>
 
-            <!-- XML Validator Tile (coming soon) -->
-            <div class="tile tile-disabled">
-                <div class="tile-icon">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-                <div class="tile-content">
-                    <h3>Walidator XML</h3>
-                    <p class="tile-description">Walidacja plików XML</p>
-                    <div class="tile-detail">Narzędzie do sprawdzania poprawności plików XML względem schematów XSD
+                <!-- XML Converter Tile (coming soon) -->
+                <div class="tile tile-disabled">
+                    <div class="tile-icon">
+                        <i class="fas fa-exchange-alt"></i>
                     </div>
-                    <div class="coming-soon">Wkrótce dostępne</div>
-                </div>
-            </div>
-
-            <!-- XML Converter Tile (coming soon) -->
-            <div class="tile tile-disabled">
-                <div class="tile-icon">
-                    <i class="fas fa-exchange-alt"></i>
-                </div>
-                <div class="tile-content">
-                    <h3>Konwerter formatów</h3>
-                    <p class="tile-description">Konwersja między formatami</p>
-                    <div class="tile-detail">Narzędzie do konwersji między formatami XML, JSON, CSV i innymi</div>
-                    <div class="coming-soon">Wkrótce dostępne</div>
-                </div>
-            </div>
-
-            <!-- ISO20022 Message Explorer Tile (coming soon) -->
-            <div class="tile tile-disabled">
-                <div class="tile-icon">
-                    <i class="fas fa-search"></i>
-                </div>
-                <div class="tile-content">
-                    <h3>Przeglądarka ISO20022</h3>
-                    <p class="tile-description">Eksploracja wiadomości ISO20022</p>
-                    <div class="tile-detail">Przeglądarka różnych typów wiadomości ISO20022 z opisami pól i strukturą
+                    <div class="tile-content">
+                        <h3>Konwerter formatów</h3>
+                        <p class="tile-description">Konwersja między formatami</p>
+                        <div class="tile-detail">Narzędzie do konwersji między formatami XML, JSON, CSV i innymi</div>
+                        <div class="coming-soon">Wkrótce dostępne</div>
                     </div>
-                    <div class="coming-soon">Wkrótce dostępne</div>
+                </div>
+
+                <!-- ISO20022 Message Explorer Tile (coming soon) -->
+                <div class="tile tile-disabled">
+                    <div class="tile-icon">
+                        <i class="fas fa-search"></i>
+                    </div>
+                    <div class="tile-content">
+                        <h3>Przeglądarka ISO20022</h3>
+                        <p class="tile-description">Eksploracja wiadomości ISO20022</p>
+                        <div class="tile-detail">Przeglądarka różnych typów wiadomości ISO20022 z opisami pól i
+                            strukturą
+                        </div>
+                        <div class="coming-soon">Wkrótce dostępne</div>
+                    </div>
                 </div>
             </div>
         </div>
