Update website descriptions, headers and footer to better reflect the actual tool purpose

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ISO20022 Generator Tools</title>
+    <title>XML & ISO20022 Tools</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -19,14 +19,15 @@
                     <i class="fas fa-exchange-alt"></i>
                 </div>
                 <div class="logo-text">
-                    <h1>ISO20022 Generator Tools</h1>
-                    <p class="tagline">Narzędzia do generowania plików XML w formacie ISO20022</p>
+                    <h1>XML & ISO20022 Tools</h1>
+                    <p class="tagline">Zestaw narzędzi do tworzenia i edycji dokumentów XML</p>
                 </div>
             </div>
             <div class="header-description">
-                <p>Wybierz jedno z narzędzi do generowania struktury wiadomości ISO20022 w różnych formatach.</p>
-                <p>Każde narzędzie umożliwia tworzenie poprawnych wiadomości zgodnych ze schematem i pobranie wyniku
-                    jako pliku XML.</p>
+                <p>Zestaw narzędzi do pracy z XML - tworzenie, edycja i walidacja struktur z naciskiem na format
+                    ISO20022.</p>
+                <p>Narzędzia umożliwiają tworzenie, edycję i walidację dokumentów XML zgodnych ze schematami XSD oraz
+                    eksport do plików.</p>
             </div>
         </div>
     </header>
@@ -120,9 +121,9 @@
                     </div>
                     <div class="tile-content">
                         <h3>Generator XML</h3>
-                        <p class="tile-description">Niestandardowy generator XML</p>
-                        <div class="tile-detail">Narzędzie do tworzenia własnych struktur XML z walidacją schematów XSD
-                        </div>
+                        <p class="tile-description">Wizualny edytor XML</p>
+                        <div class="tile-detail">Intuicyjne narzędzie do tworzenia i edycji dokumentów XML z podglądem
+                            drzewa i kodem, wsparciem dla szablonów i walidacją XSD</div>
                     </div>
                 </a>
 
@@ -173,8 +174,10 @@
 
     <footer class="site-footer">
         <div class="footer-content">
-            <p>&copy; 2024 ISO20022 Generator Tools</p>
-            <p>Narzędzia do tworzenia struktury wiadomości XML zgodnych ze standardem ISO20022</p>
+            <p>&copy; 2024 XML & ISO20022 Tools</p>
+            <p>Nieoficjalne narzędzia do tworzenia i edycji struktur XML</p>
+            <p><small>To narzędzie nie jest powiązane z żadną organizacją finansową ani standaryzacyjną. Zostało
+                    stworzone w celach edukacyjnych.</small></p>
         </div>
     </footer>
 
