Add green glow effect to generator tiles to match blue effect in other tools section

--- a/index.html
+++ b/index.html
@@ -42,70 +42,72 @@
     </div>
 
     <div class="container">
-        <h2 class="section-title">Dostępne generatory</h2>
+        <div class="generators-container">
+            <h2 class="section-title">Dostępne generatory</h2>
 
-        <div class="tiles-container">
-            <!-- PACS.008 Tile -->
-            <a href="pacs008.html" class="tile">
-                <div class="tile-icon">
-                    <i class="fas fa-exchange-alt"></i>
-                </div>
-                <div class="tile-content">
-                    <h3>PACS.008.001.13</h3>
-                    <p class="tile-description">FIToFICustomerCreditTransfer</p>
-                    <div class="tile-detail">Generator wiadomości przelewów międzybankowych</div>
-                </div>
-            </a>
+            <div class="tiles-container">
+                <!-- PACS.008 Tile -->
+                <a href="pacs008.html" class="tile">
+                    <div class="tile-icon">
+                        <i class="fas fa-exchange-alt"></i>
+                    </div>
+                    <div class="tile-content">
+                        <h3>PACS.008.001.13</h3>
+                        <p class="tile-description">FIToFICustomerCreditTransfer</p>
+                        <div class="tile-detail">Generator wiadomości przelewów międzybankowych</div>
+                    </div>
+                </a>
 
-            <!-- Future PACS.009 Tile (coming soon) -->
-            <div class="tile tile-disabled">
-                <div class="tile-icon">
-                    <i class="fas fa-university"></i>
+                <!-- Future PACS.009 Tile (coming soon) -->
+                <div class="tile tile-disabled">
+                    <div class="tile-icon">
+                        <i class="fas fa-university"></i>
+                    </div>
+                    <div class="tile-content">
+                        <h3>PACS.009.001.10</h3>
+                        <p class="tile-description">FinancialInstitutionCreditTransfer</p>
+                        <div class="tile-detail">Generator przelewów między instytucjami finansowymi</div>
+                        <div class="coming-soon">Wkrótce dostępne</div>
+                    </div>
                 </div>
-                <div class="tile-content">
-                    <h3>PACS.009.001.10</h3>
-                    <p class="tile-description">FinancialInstitutionCreditTransfer</p>
-                    <div class="tile-detail">Generator przelewów między instytucjami finansowymi</div>
-                    <div class="coming-soon">Wkrótce dostępne</div>
-                </div>
-            </div>
 
-            <!-- Future PACS.002 Tile (coming soon) -->
-            <div class="tile tile-disabled">
-                <div class="tile-icon">
-                    <i class="fas fa-receipt"></i>
+                <!-- Future PACS.002 Tile (coming soon) -->
+                <div class="tile tile-disabled">
+                    <div class="tile-icon">
+                        <i class="fas fa-receipt"></i>
+                    </div>
+                    <div class="tile-content">
+                        <h3>PACS.002.001.12</h3>
+                        <p class="tile-description">FIToFIPaymentStatusReport</p>
+                        <div class="tile-detail">Generator raportów statusu płatności</div>
+                        <div class="coming-soon">Wkrótce dostępne</div>
+                    </div>
                 </div>
-                <div class="tile-content">
-                    <h3>PACS.002.001.12</h3>
-                    <p class="tile-description">FIToFIPaymentStatusReport</p>
-                    <div class="tile-detail">Generator raportów statusu płatności</div>
-                    <div class="coming-soon">Wkrótce dostępne</div>
-                </div>
-            </div>
 
-            <!-- Future PACS.004 Tile (coming soon) -->
-            <div class="tile tile-disabled">
-                <div class="tile-icon">
-                    <i class="fas fa-rotate-left"></i>
+                <!-- Future PACS.004 Tile (coming soon) -->
+                <div class="tile tile-disabled">
+                    <div class="tile-icon">
+                        <i class="fas fa-rotate-left"></i>
+                    </div>
+                    <div class="tile-content">
+                        <h3>PACS.004.001.11</h3>
+                        <p class="tile-description">PaymentReturn</p>
+                        <div class="tile-detail">Generator komunikatów zwrotu płatności</div>
+                        <div class="coming-soon">Wkrótce dostępne</div>
+                    </div>
                 </div>
-                <div class="tile-content">
-                    <h3>PACS.004.001.11</h3>
-                    <p class="tile-description">PaymentReturn</p>
-                    <div class="tile-detail">Generator komunikatów zwrotu płatności</div>
-                    <div class="coming-soon">Wkrótce dostępne</div>
-                </div>
-            </div>
 
-            <!-- Future PAIN.001 Tile (coming soon) -->
-            <div class="tile tile-disabled">
-                <div class="tile-icon">
-                    <i class="fas fa-credit-card"></i>
-                </div>
-                <div class="tile-content">
-                    <h3>PAIN.001.001.11</h3>
-                    <p class="tile-description">CustomerCreditTransferInitiation</p>
-                    <div class="tile-detail">Generator inicjacji przelewów klienta</div>
-                    <div class="coming-soon">Wkrótce dostępne</div>
+                <!-- Future PAIN.001 Tile (coming soon) -->
+                <div class="tile tile-disabled">
+                    <div class="tile-icon">
+                        <i class="fas fa-credit-card"></i>
+                    </div>
+                    <div class="tile-content">
+                        <h3>PAIN.001.001.11</h3>
+                        <p class="tile-description">CustomerCreditTransferInitiation</p>
+                        <div class="tile-detail">Generator inicjacji przelewów klienta</div>
+                        <div class="coming-soon">Wkrótce dostępne</div>
+                    </div>
                 </div>
             </div>
         </div>
