Fix back-to-main button and notification styles to match XML generator page

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 </div>
 
                 <!-- XML Converter Tile (coming soon) -->
-                <div class="tile tile-disabled">
+                <a href="format-converter.html" class="tile">
                     <div class="tile-icon">
                         <i class="fas fa-exchange-alt"></i>
                     </div>
@@ -152,9 +152,8 @@
                         <h3>Konwerter formatów</h3>
                         <p class="tile-description">Konwersja między formatami</p>
                         <div class="tile-detail">Narzędzie do konwersji między formatami XML, JSON, CSV i innymi</div>
-                        <div class="coming-soon">Wkrótce dostępne</div>
                     </div>
-                </div>
+                </a>
 
                 <!-- ISO20022 Message Explorer Tile (coming soon) -->
                 <div class="tile tile-disabled">
